[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.0
margin_top = -116.0
margin_right = 102.0
margin_bottom = -44.0

[node name="ItemList" type="ItemList" parent="."]
margin_left = 39.0
margin_top = 144.0
margin_right = 367.0
margin_bottom = 317.0

[node name="OrdenededArray" type="Label" parent="ItemList"]
margin_left = 15.0
margin_top = 84.0
margin_right = 309.0
margin_bottom = 98.0

[node name="InsertedNumbers" type="Label" parent="ItemList"]
margin_left = 23.0
margin_top = 41.0
margin_right = 306.0
margin_bottom = 57.0

[node name="NumbersCount" type="Label" parent="ItemList"]
margin_left = 107.0
margin_top = 151.0
margin_right = 147.0
margin_bottom = 165.0

[node name="Label" type="Label" parent="."]
margin_left = 378.0
margin_top = 146.0
margin_right = 694.0
margin_bottom = 179.0
text = "Digite um número e aperte espaço para adicionar"

[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
